# myagent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yml  pyproject.toml
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-code-fixer.md  gsd-debugger.md  gsd-executor.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: api-business.json  api-simple.md  architecture.md  phoenix.md  runtime-design-dynamic-mcp.md
docs/memory/: README.md
mcp-server/: hiking_spot_mcp.py  weather_mcp.py
scripts/: run_service.sh  verify_phase1.sh  verify_phase2.sh  verify_phase3.sh  verify_phase4.sh  verify_phase5.sh  verify_phase6.sh  verify_phase7.sh
src/: main.py
tests/: conftest.py  test_agent_config.py  test_chat_stream.py  test_context.py  test_mcp.py  test_model_config.py  test_official_skills_smoke.py  test_parity.py  test_session.py  test_session_bootstrap.py  test_session_memory.py  test_session_state_structure.py  test_settings.py  test_skill_install_service.py  test_skill_local_runtime.py  test_skill_process_flow.py  test_skill_routes.py  test_skill_runtime.py  test_skills_api.py  test_startup.py  test_tools.py
(+351 files in other folders)
