[project]
name = "myagent"
version = "0.1.0"
description = "AgentScope Skill/Tool/MCP Validation Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.3",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
